# autodotenv

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.rst  autodotenv.pth  autodotenv.py  requirements.in  requirements.txt  requirements38.txt  setup.cfg  setup.py  test_autodotenv.py  tox.ini
.github/workflows/: test.yml
