[bumpversion]
commit = True
current_version = 0.1.1
tag = True
tag_name = {new_version}

[bumpversion:file:autodotenv.py]

[metadata]
name = AutoDotEnv
version = attr: autodotenv.__version__
author = Chris Church
author_email = chris@ninemoreminutes.com
description = Automatically set environment variables from .env file when running any Python command.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = dot env, env file, environ
license = BSD
url = https://github.com/cchurch/autodotenv/
project_urls = 
	Documentation = https://github.com/cchurch/autodotenv/
	Source = https://github.com/cchurch/autodotenv/
	Tracker = https://github.com/cchurch/autodotenv/issues
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = autodotenv
include_package_data = True
zip_safe = False
install_requires = python-dotenv

[check]
metadata = True
restructuredtext = True
strict = True

[clean]
all = True

[egg_info]
tag_build = .dev

[bdist_wheel]
universal = 1

[aliases]
bdist_egg = unsupported
develop = unsupported
easy_install = unsupported
install = unsupported
install_egg_info = unsupported
upload_docs = unsupported
check = twine_check
upload = twine_upload
dev_build = clean flake8 test egg_info sdist bdist_wheel twine_check
release_build = clean flake8 test egg_info -b "" sdist bdist_wheel twine_check
ship_it = release_build twine_upload

[pycodestyle]
ignore = E501
exclude = build,dist,.tox

[flake8]
ignore = E501
exclude = build,dist,.tox
